if(NOT TARGET vtkIOJUPITER OR NOT TARGET vtkJUPITER)
  return()
endif()

add_executable(vtklib-test test_vtklib.cxx)
target_link_libraries(vtklib-test test-util-cxx)
if (TARGET vtkIOJUPITER)
  target_link_libraries(vtklib-test vtkIOJUPITER)
  target_compile_definitions(vtklib-test PRIVATE HAVE_VTKIOJUPITER)
endif()
if (TARGET vtkJUPITER)
  target_link_libraries(vtklib-test vtkJUPITER)
  target_compile_definitions(vtklib-test PRIVATE HAVE_VTKJUPITER)
endif()
